# unittest-ai-agent

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  main.py  parser.py  pyproject.toml  pytest.ini  requirements.txt  test_writer.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  gitleaks.yml  test.yml
example/: converter.py
example/tests/: test_convert_date_to_iso.py
prompts/: unittest_prompt.txt
src/ut/: constants.py  llm_client.py  parser.py  test_writer.py
src/ut/cli/: __init__.py  main.py
src/ut/cli/commands/: constants.py  file_processor.py  generate.py  helper.py
src/ut/example/: converter.py
src/ut/example/tests/: test_convert_date_to_iso.py
src/ut/prompts/: generate_unittest_class.txt  prompt_builder.py
tests/cli/commands/: __init__.py  test_generate.py
unittest_ai_agent/: llm_client.py  main.py  parser.py  test_writer.py
unittest_ai_agent/example/: converter.py
unittest_ai_agent/example/tests/: test_convert_date_to_iso.py
unittest_ai_agent/prompts/: generate_unittest_class.txt  generate_unittest_standalone.txt
